# gtom

./: .gitignore  CMakeLists.txt  DeviceFunctions.cuh  Functions.cuh  GLMFunctions.cuh  GTOM.sln  GTOM.vcxproj  GTOM.vcxproj.filters  Prerequisites.cuh
Alignment/: Align2D.cu  Align3D.cu
BinaryManipulation/: Binarize.cu  Dilate.cu
Correlation/: CCF.cu  LocalPeaks.cu  Peak.cu
CubicSplines/: cubicPrefilter2D.cu  cubicPrefilter3D.cu  cubicTex.cu  memcpy.cu
CubicSplines/internal/: bspline_kernel.cu  cubicPrefilter_kernel.cu  cubicTexKernels.cu  math_func.cu
FFT/: FFT.cu  FFTRemap.cu  FFTResize.cu  FFTResize.cuh  IFFT.cu
GTOMTest/: ART.cpp  Align2D.cpp  Align3D.cpp  AnisotropicFSC.cpp  Backward.cpp  Bandpass.cpp  BandpassNeat.cpp  BeamTilt.cpp  Bin.cpp  CCF.cpp  CTFCorrect.cpp  CTFFit.cpp  CTFSimulation.cpp  CTFTiltCorrect.cpp  CTFTiltFit.cpp  ConeMask.cpp  Coordinates.cpp  Decay.cpp  Dev.cpp  Euler.cpp  Extraction.cpp  FFT.cpp  FFTLines.cpp  FFTR2C.cpp  FFTRemap.cpp  FFTResize.cpp  FFT_1D.cpp  FSC.cpp  FitMagAnisotropy.cpp  Forward.cpp  GS.cpp  GTOMTest.vcxproj  GTOMTest.vcxproj.filters  Helper.cpp  Histogram.cpp  IrregularSphereMask.cpp  Liblion.cpp  LocalFSC.cpp  LocalFSCBfac.cpp  LocalPeaks.cpp  (+40 more)
GTOMTest/Data/: complexinterleaved.asv  complexinterleaved.m
Generics/: Arithmetics.cu  CompositeArithmetics.cu  Dev.cu  Extraction.cu  Histogram.cu  IndexOf.cu  LocalStdDev.cu  MakeAtlas.cu  MinMax.cu  MinMaxMonolithic.cu  Padding.cu  Reductions.cu  Sum.cu  SumMinMax.cu
GoogleTest/: GoogleTest.vcxproj  GoogleTest.vcxproj.filters
Helpers/: AngularSpacing.cu  Euler.cu  HermitianSymmetry.cu  MDPointer.cu  Memory.cu  Misc.cu  TypeConversion.cu
IO/: em.cpp  mrc.cpp  raw.cpp
ImageManipulation/: AnisotropicLowpass.cu  Bandpass.cu  Bin.cu  Coordinates.cu  LocalLowpass.cu  Norm.cu  Shift.cu  Xray.cu
MEX/: Helper.cu  MEX.vcxproj  MEX.vcxproj.filters  Prerequisites.h  compile.m  compileAlignment.m  compileCPU.m  compileCTF.m  compileCorrelation.m  compileFFT.m  compileGenerics.m  compileImageManipulation.m  compileProjection.m  compileReconstruction.m  compileResolution.m  compileTomography.m  compileTransformation.m  complexinterleaved.cpp  mexopts-debug.bat  mexopts-release.bat  mexopts-revertto.bat  mexopts.bat
MEX/Alignment/: Align3D.cu
MEX/CPU/: ctom_rotationalaverage.cu  tom_rotationalaverage.m
MEX/CTF/: cgtom_ctf_fit.cu  cgtom_ctf_fit_correct.cu  cgtom_ctf_tiltcorrect.cu  cgtom_ctf_tiltfit.cu  cgtom_wiener_correct.cu  gtom_ctf_fit.m  gtom_ctf_fit_correct.m  gtom_ctf_tiltcorrect.m  gtom_ctf_tiltfit.m  gtom_wiener_correct.m
MEX/Correlation/: cgtom_line_similarity_matrix.cu  cgtom_local_peaks.cu  cgtom_pick.cu  cgtom_similarity_matrix_2d.cu  cgtom_similarity_matrix_3d.cu  gtom_line_similarity_matrix.m  gtom_local_peaks.m  gtom_pick.m  gtom_similarity_matrix_2d.m  gtom_similarity_matrix_3d.m
MEX/FFT/: FFTR2C.cu  FFTR2CFull.cu  IFFTC2RFull.cu  cgtom_fftc2c.cu  cgtom_ifftc2c.cu  cgtom_ifftc2r.cu
MEX/Generics/: cgtom_norm.cu
MEX/ImageManipulation/: AnisotropicLowpass.cu  cgtom_bandpass.cu  (+2 more)
Masking/: IrregularSphereMask.cu  RectangleMask.cu  Remap.cu  SphereMask.cu  Windows.cu
Projection/: Backward.cu  Forward.cu
Reconstruction/: ART.cu  RecFourier.cu
Resolution/: AnisotropicFSC.cu  FSC.cu  LocalAnisotropicFSC.cu  LocalFSC.cu
Tomography/: InterpolateSingleAxis.cu
Transformation/: Bin.cu  Coordinates.cu  Rotation.cu  Scale.cu  Shift.cu
include/: Alignment.cuh  Angles.cuh  Binary.cuh  CTF.cuh  Correlation.cuh  CubicInterp.cuh  DeviceFunctions.cuh  FFT.cuh  GTOM.cuh  Generics.cuh  Helper.cuh  IO.cuh  ImageManipulation.cuh  Masking.cuh  Optimization.cuh  PCA.cuh  Prerequisites.cuh  Projection.cuh  Reconstruction.cuh  Relion.cuh  Resolution.cuh  Tomography.cuh  Transformation.cuh  cutil_math_bugfixes.cuh
(+229 files in other folders)
